--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,15 @@
     margin: auto;
     display: block;
     position: absolute;
-    padding-top: 100px;
+    padding-top: 50px;
     left: 0;
     right: 0;
 }
 
 body {
     background-color: #CCBAFF;
+}
+
+canvas {
+    cursor: none;
 }
